feat: 监控面板 + Demo模式 + 负载均衡简化 + 副本因子修复
- 深色主题监控面板：实时SSE推送、集群概览/服务器/Region/表/SQL指标
- Demo模式侧边栏：分步演示建表、写入、故障转移、扩容、负载均衡
- 负载均衡退化为Region计数策略（regionCount×10），阈值调至5
- 修复replication.factor未持久化到Table元数据的bug
- 清理RS配置中无效的replication.factor和heartbeat.timeout.ms
- 移除死代码依赖、修复Java 11兼容性(LexerTest)